<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name" translatable="false">Kmoney</string>
    <string name="zero" translatable="false">0</string>
    <string name="one" translatable="false">1</string>
    <string name="two" translatable="false">2</string>
    <string name="three" translatable="false">3</string>
    <string name="four" translatable="false">4</string>
    <string name="five" translatable="false">5</string>
    <string name="six" translatable="false">6</string>
    <string name="seven" translatable="false">7</string>
    <string name="eight" translatable="false">8</string>
    <string name="nine" translatable="false">9</string>
    <string name="doublezero" translatable="false">00</string>
    <string name="clear" translatable="false">C</string>
    <string name="backspace" translatable="false">BS</string>
    <string name="copy" translatable="false">CP</string>
    <string name="decimal_mark" translatable="false">.</string>
    
    <string name="menu_settings">Settings</string>
    <string name="menu_import">Import</string>
    <string name="menu_export">Export</string>
    <string name="menu_master">Master Data</string>
    <string name="menu_user">Switch User</string>
    <string name="menu_about">About Kmoney</string>
    <string name="please_select">Please select</string>
    <string name="income">Income</string>
    <string name="expense">Expense</string>
    <string name="detail">Detail</string>
    <string name="history">History</string>
    <string name="date_format">%4$s, %5$s %3$d, %1$d</string>
    <string name="day_format">%2$s, %3$s %1$d</string>
    <string name="month_format">%3$s %1$d</string>
    <string name="entry">Entry</string>
    <string name="prevMonth">Prev</string>
    <string name="nextMonth">Next</string>
    <string name="prevDay">Prev</string>
    <string name="nextDay">Next</string>
    <string name="photo">Photo</string>
    <string name="cash">Cash</string>
    <string name="bank">Bank</string>
    <string name="creditcard">Credit Card</string>
    <string name="emoney">E-Money</string>
    <string name="category">Category</string>
    <string name="user">User</string>
    <string name="add">Add</string>
    <string name="delete">Delete</string>
    <string name="sum">Sum</string>
    <string name="total">Total</string>
    <string name="list">List</string>
    <string name="confirm_delete">Do you really want to delete?</string>
    <string name="export_in_progress">Exporting database&#8230;</string>
    <string name="export_done">Export successful!</string>
    <string name="export_failed">Export failed</string>
    <string name="import_in_progress">Importing database&#8230;</string>
    <string name="import_done">Import successful!</string>
    <string name="import_failed">Import failed</string>
    <string name="import_source">Import source file</string>
    <string name="detail_nothing">No history</string>
    <string name="no_files">No files</string>
    <string name="dropbox_linked">Linked to Dropbox account. Please repeat last operation</string>
    
    <string name="pref_settings_title">Settings</string>
    <string name="pref_export_settings_title">Import/Export</string>
    <string name="pref_export_type">Import/Export Type</string>
    <string name="pref_export_type_summary">SD Card or Dropbox</string>
    <string name="pref_export_type_title">Import/Export Type</string>
    <string name="pref_swipe_summary">Enable swipe in Monthly view</string>
    <string name="pref_swipe_title">Swipe</string>
    
    <string name="error_photo">Couldn\'t take picture. Try once more</string>
    <string name="error_zero">Please enter income or expense</string>
    <string name="info_copyasnew">Copied as new data</string>
    
</resources>