<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/RelativeLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="fill_vertical"
    android:orientation="vertical"
    tools:context=".KmoneyActivity" >

    <LinearLayout
        android:id="@+id/inputitems"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:orientation="vertical" >

        <LinearLayout
            android:id="@+id/month"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical|center_horizontal" >

            <Button
                android:id="@+id/buttonPrev"
                style="?android:attr/buttonStyleSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/prevDay"
                android:textAppearance="?android:attr/textAppearanceSmallInverse" />

            <TextView
                android:id="@+id/textViewDate"
                android:layout_width="0dip"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center_horizontal|center"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <Button
                android:id="@+id/buttonNext"
                style="?android:attr/buttonStyleSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/nextDay"
                android:textAppearance="?android:attr/textAppearanceSmall" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <Spinner
                android:id="@+id/spinnerType"
                android:textAppearance="?android:attr/textAppearanceLarge" 
                android:layout_width="0dip"
                android:layout_height="match_parent"
                android:layout_weight="1" />

            <Spinner
                android:id="@+id/spinnerTypeDetail"
                android:textAppearance="?android:attr/textAppearanceLarge" 
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="match_parent" >

            <Spinner
                android:id="@+id/spinnerItem"
                android:textAppearance="?android:attr/textAppearanceLarge" 
                android:layout_width="0dip"
                android:layout_height="wrap_content"
                android:layout_weight="1" />

            <Button
                android:id="@+id/buttonPhoto"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/photo" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/textViewDetail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/detail"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <EditText
                android:id="@+id/editTextDetail"
                android:layout_width="0dip"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:inputType="text" >

                <requestFocus />
            </EditText>

            <Button
                android:id="@+id/buttonHistory"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/history" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50sp" >

            <ToggleButton
                android:id="@+id/toggleButtonIncomeExpense"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:background="@android:drawable/btn_default"
                android:textOff="@string/expense"
                android:textOn="@string/income" />

            <net.kazhik.android.kmoney.AutoResizeTextView
                android:id="@+id/textViewAmount"
                android:layout_width="0dip"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="#ffffff"
                android:textColor="#000000"
                android:gravity="right|center_vertical"
                android:singleLine="true"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textSize="48sp"
                android:textStyle="bold" />

        </LinearLayout>
    </LinearLayout>

    <TableLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/okcancel"
        android:layout_below="@+id/inputitems" >

        <TableRow
            android:id="@+id/tableRow1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <Button
                android:id="@+id/button1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:minHeight="60dp"
                android:text="@string/one"
                android:textAppearance="?android:attr/textAppearanceLargeInverse" />

            <Button
                android:id="@+id/button2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:minHeight="60dp"
                android:text="@string/two"
                android:textAppearance="?android:attr/textAppearanceLargeInverse" />

            <Button
                android:id="@+id/button3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:minHeight="60dp"
                android:text="@string/three"
                android:textAppearance="?android:attr/textAppearanceLargeInverse" />

            <Button
                android:id="@+id/buttonBackSpace"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:minHeight="60dp"
                android:text="@string/backspace"
                android:textAppearance="?android:attr/textAppearanceLargeInverse" />
        </TableRow>

        <TableRow
            android:id="@+id/tableRow2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <Button
                android:id="@+id/button4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:minHeight="60dp"
                android:text="@string/four"
                android:textAppearance="?android:attr/textAppearanceLargeInverse" />

            <Button
                android:id="@+id/button5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:minHeight="60dp"
                android:text="@string/five"
                android:textAppearance="?android:attr/textAppearanceLargeInverse" />

            <Button
                android:id="@+id/button6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:minHeight="60dp"
                android:text="@string/six"
                android:textAppearance="?android:attr/textAppearanceLargeInverse" />
            
            <Button
                android:id="@+id/buttonBlank1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:minHeight="60dp"
                android:text=" "
                android:textAppearance="?android:attr/textAppearanceLargeInverse" />

        </TableRow>

        <TableRow
            android:id="@+id/tableRow3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <Button
                android:id="@+id/button7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:minHeight="60dp"
                android:text="@string/seven"
                android:textAppearance="?android:attr/textAppearanceLargeInverse" />

            <Button
                android:id="@+id/button8"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:minHeight="60dp"
                android:text="@string/eight"
                android:textAppearance="?android:attr/textAppearanceLargeInverse" />

            <Button
                android:id="@+id/button9"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:minHeight="60dp"
                android:text="@string/nine"
                android:textAppearance="?android:attr/textAppearanceLargeInverse" />
            
            <Button
                android:id="@+id/buttonBlank2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:minHeight="60dp"
                android:text=" "
                android:textAppearance="?android:attr/textAppearanceLargeInverse" />
        </TableRow>

        <TableRow
            android:id="@+id/tableRow4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <Button
                android:id="@+id/buttonClear"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:minHeight="60dp"
                android:text="@string/clear"
                android:textAppearance="?android:attr/textAppearanceLargeInverse" />

            <Button
                android:id="@+id/button0"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:minHeight="60dp"
                android:text="@string/zero"
                android:textAppearance="?android:attr/textAppearanceLargeInverse" />

            <Button
                android:id="@+id/buttonDecimalMark"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:minHeight="60dp"
                android:text="@string/decimal_mark"
                android:textAppearance="?android:attr/textAppearanceLargeInverse" />
            <Button
                android:id="@+id/buttonBlank3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:minHeight="60dp"
                android:text=" "
                android:textAppearance="?android:attr/textAppearanceLargeInverse" />
            
        </TableRow>
    </TableLayout>

    <LinearLayout
        android:id="@+id/okcancel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true" >

        <Button
            android:id="@+id/buttonCancel"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@android:string/cancel"
            android:textAppearance="?android:attr/textAppearanceMediumInverse" />

        <Button
            android:id="@+id/buttonOk"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@android:string/ok"
            android:textAppearance="?android:attr/textAppearanceMediumInverse" />
    </LinearLayout>

</RelativeLayout>