<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="#556B2F"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MonthlySummaryActivity" >

    <LinearLayout
        android:id="@+id/month"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_gravity="center_horizontal|center" >

        <Button
            android:id="@+id/buttonPrev"
            style="?android:attr/buttonStyleSmall"
            android:textAppearance="?android:attr/textAppearanceSmallInverse" 
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/prevMonth" />

        <TextView
            android:id="@+id/textViewDate"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal|center"
            android:layout_weight="1"
            android:textIsSelectable="true"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <Button
            android:id="@+id/buttonNext"
            style="?android:attr/buttonStyleSmall"
            android:textAppearance="?android:attr/textAppearanceSmallInverse" 
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/nextMonth" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_below="@id/month"
        android:layout_above="@id/buttons"
        android:layout_height="wrap_content"
        android:baselineAligned="false"
        android:orientation="vertical"
        >
            <LinearLayout
                android:id="@+id/pieChart"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
            />
            <ListView
                android:id="@+id/listViewMonthlySummary"
                android:cacheColorHint="#00000000"
                android:listSelector="@android:color/transparent"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1">
            </ListView>

			<LinearLayout
			    android:layout_width="wrap_content"
			    android:layout_height="wrap_content"
			    android:layout_gravity="right"
			    android:background="#556B10"
			    android:orientation="horizontal" >
			
			    <TextView
			        android:textIsSelectable="true"
			        android:id="@+id/textViewTotal"
			        android:layout_width="wrap_content"
			        android:layout_height="wrap_content"
			        android:layout_weight="1"
			        android:layout_marginRight="10dp"
			        android:textAppearance="?android:attr/textAppearanceMedium" />
			
			    <TextView
                    android:textIsSelectable="true"
			        android:id="@+id/textViewTotalValue"
			        android:layout_width="wrap_content"
			        android:layout_height="wrap_content"
			        android:layout_weight="1"
			        android:gravity="end"
			        android:textAppearance="?android:attr/textAppearanceMedium" />
			
			</LinearLayout>
        </LinearLayout>
	<LinearLayout
        android:id="@+id/buttons"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true" >

        <Button
            android:id="@+id/buttonEntry"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/entry"
            android:textAppearance="?android:attr/textAppearanceMediumInverse" />

        <Button
            android:id="@+id/buttonList"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/list"
            android:textAppearance="?android:attr/textAppearanceMediumInverse" />
    </LinearLayout>
    
</RelativeLayout>